--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -20,3 +20,11 @@ input[type="password"] {
 input:focus {
     border-color: crimson;
 }
+
+li, li > ul {
+    margin-left: 25px;
+}
+
+ul > li {
+    margin-left: 0;
+}
