feat: Create PIN login and minor updates
1. add Enter key handler in login, sign-up, pin
2. change user_agent length to 500
3. move duplicate style(label, .field) to 'item.css'

--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -3,8 +3,21 @@ hr {
     border: none;
 }
 
+.field {
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+label {
+    display: block;
+    font-size: 30px;
+    font-weight: 500;
+}
+
 input[type="email"],
 input[type="text"],
+input[type="tel"],
 input[type="password"] {
     display: block;
     width: 100%;
