chore: Set font-display to swap

--- a/src/Pretendard.css
+++ b/src/Pretendard.css
@@ -10,23 +10,27 @@ http://scripts.sil.org/OFL
 @font-face {
     font-family: "Pretendard";
     font-weight: 600;
+    font-display: swap;
     src: local("Pretendard SemiBold"), url("/Pretendard/SemiBold.woff2") format("woff2");
 }
 
 @font-face {
     font-family: "Pretendard";
     font-weight: 400;
+    font-display: swap;
     src: local("Pretendard Regular"), url("/Pretendard/Regular.woff2") format("woff2");
 }
 
 @font-face {
     font-family: "Pretendard";
     font-weight: 300;
+    font-display: swap;
     src: local("Pretendard Light"), url("/Pretendard/Light.woff2") format("woff2");
 }
 
 @font-face {
     font-family: "Pretendard";
     font-weight: 200;
+    font-display: swap;
     src: local("Pretendard ExtraLight"), url("/Pretendard/ExtraLight.woff2") format("woff2");
 }
