--- a/src/app.css
+++ b/src/app.css
@@ -176,6 +176,10 @@ tbody > tr:hover {
     margin-right: 3px;
 }
 
+.buttons > .button {
+    margin-bottom: 3px;
+}
+
 .button {
     display: inline-block;
     text-decoration: none;
