--- a/src/app.css
+++ b/src/app.css
@@ -128,7 +128,8 @@ label {
 
 input[type="email"],
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+select {
     display: block;
     width: 100%;
     font-size: 20px;
