--- a/src/todo-content.css
+++ b/src/todo-content.css
@@ -8,11 +8,51 @@
     unicode-range: U+0020-007E;
 }
 
+/* Label area */
+div.labels {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 35px;
+}
+
+/* Label Colors */
+span.lv1 {
+    --label-text: #ffffff;
+    --label-color: #2093ff;
+}
+
+span.lv2 {
+    --label-text: #000;
+    --label-color: #ffcc4d;
+}
+
+span.lv3 {
+    --label-text: #fff;
+    --label-color: #dc143c;
+}
+
+/* Label */
+div.labels > span {
+    color: var(--label-text);
+    background-color: var(--label-color);
+    border-radius: 0.25rem;
+    padding: 6px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    margin-bottom: 3px;
+}
+
+div.labels > span:not(:last-child) {
+    margin-right: 3px;
+}
+
+/* Content area */
 div.todo-content {
     min-height: 25px;
     overflow-x: auto;
 }
 
+/* Heading */
 h1.todo-content,
 h2.todo-content {
     font-size: 30px;
@@ -23,6 +63,7 @@ h4.todo-content {
     font-size: 25px;
 }
 
+/* etc.. */
 hr.todo-content {
     margin-top: 10px;
     margin-bottom: 5px;
