--- a/src/app.css
+++ b/src/app.css
@@ -149,12 +149,22 @@ input:focus {
     border-color: var(--red);
 }
 
-/* Ordered Lists & Unordered Lists */
-li,
-li > ul {
-    margin-left: 25px;
+/* Ordered Lists */
+ol {
+    counter-reset: section;
+    list-style-type: none;
 }
 
+ol > li::before {
+    counter-increment: section;
+    content: counters(section, ".") ". ";
+}
+
+li > ol {
+    margin-left: 30px;
+}
+
+/* Unordered Lists */
 ul > li {
     margin-left: 0;
 }
@@ -162,6 +172,10 @@ ul > li {
 ul > li::before {
     content: "-";
     margin-right: 10px;
+}
+
+li > ul {
+    margin-left: 20px;
 }
 
 /* Table */
