--- a/src/navbar.css
+++ b/src/navbar.css
@@ -5,7 +5,8 @@
         overflow: hidden;
     }
 
-    .navbar ul li:first-child {
+    .navbar ul li.head {
+        height: 45px;
         width: 50%;
     }
 
@@ -16,11 +17,23 @@
     }
 
     .navbar ul li.trigger > span {
+        position: absolute;
+        right: 0;
         display: block;
         width: 35px;
         border-top: 1px solid var(--color);
         padding-bottom: 10px;
         content: "";
+    }
+
+    .navbar ul li.trigger > span:nth-child(1) {
+        top: 10px;
+    }
+    .navbar ul li.trigger > span:nth-child(2) {
+        top: 20px;
+    }
+    .navbar ul li.trigger > span:nth-child(3) {
+        top: 30px;
     }
 
     .navbar ul.nav-opened li.trigger > span {
