chore: Add updown margin in blockquote

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -74,6 +74,8 @@ blockquote {
     padding: 5px;
     border: 1px dashed var(--blue);
     border-left: 3px solid var(--blue);
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /* Loading spinner */
