--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,42 +5,45 @@
         overflow: hidden;
     }
 
-    .navbar ul li.head {
+    .navbar ul .head {
+        display: inline-block;
         height: 45px;
-        width: 50%;
+        width: calc(50% - 20px);
     }
 
-    .navbar ul li.trigger {
+    .navbar ul .head:nth-child(2) {
         position: absolute;
-        right: 15px;
-        margin-top: -38px;
+        right: 5%;
     }
 
-    .navbar ul li.trigger > span {
+    .navbar ul a.trigger {
+        height: 26px;
+        --space: calc(26px / 3);
+        --start: 3px;
+    }
+
+    .navbar ul a.trigger > span {
         position: absolute;
-        right: 0;
         display: block;
-        width: 35px;
-        border-top: 1px solid var(--color);
-        padding-bottom: 10px;
-        content: "";
+        right: 0;
+        width: 30px;
+        margin-top: var(--start);
+        border-bottom: 1px solid var(--color);
     }
 
-    .navbar ul li.trigger > span:nth-child(1) {
-        top: 10px;
-    }
-    .navbar ul li.trigger > span:nth-child(2) {
-        top: 20px;
-    }
-    .navbar ul li.trigger > span:nth-child(3) {
-        top: 30px;
+    .navbar ul a.trigger > span:nth-child(2) {
+        margin-top: calc(var(--space) + var(--start));
     }
 
-    .navbar ul.nav-opened li.trigger > span {
+    .navbar ul a.trigger > span:nth-child(3) {
+        margin-top: calc(var(--space) * 2 + var(--start));
+    }
+
+    .navbar ul.nav-opened a.trigger > span {
         border-color: var(--gray);
     }
 
-    .navbar .nav-closed li:not(:first-child):not(.trigger) {
+    .navbar .nav-closed li:not(.head) {
         display: none;
     }
 
@@ -52,6 +55,11 @@
         text-decoration: none;
         padding-top: 15px;
     }
+
+    .navbar li > a {
+        display: block;
+        width: 100%;
+    }
 }
 
 /* PC */
@@ -61,7 +69,7 @@
         overflow: hidden;
     }
 
-    .navbar ul li.trigger {
+    .navbar ul .trigger {
         display: none;
     }
 
@@ -83,8 +91,14 @@
     }
 }
 
-.navbar li:hover {
-    cursor: pointer;
+.navbar a {
+    color: var(--color);
+    text-decoration: none;
+}
+
+.navbar a:hover,
+.navbar a:focus {
+    --color: var(--blue);
     text-shadow: 0 0 var(--text-shadow) var(--color);
 }
 
